--- a/css/styles.css
+++ b/css/styles.css
@@ -200,12 +200,18 @@ letter-spacing: 0.06em;
 .list-feature{
 display: flex;
 }
-/* .list-feature .desc-feature::before {
+.desc-feature::before {
+content: '';
 display: block;
-content: ;
+width: 100%;
 height: 120px;
+margin-bottom: 30px;
+background-color: #F5F4FA;
+border-radius: 4px;
 outline: 1px solid red;
-} */
+}
+.antenna{
+}
 
 .list-feature .title{
 font-weight: 700;
@@ -288,7 +294,36 @@ color: var(--second-text-color);
 font-size: 16px;
 line-height: 1.19;
 }
+/* --Clients-- */
+.clients-list{
+display: flex;
+}
+.clients-list li+li{
+margin-left: 30px;
+}
+.clients-list li{
+border: 1px solid #AFB1B8;
+border-radius: 4px;
+width: 170px;
+height: 92px;
+text-align: center;
+}
+.adress-list a{
 
+}
+.clients{
+/* width: 170px;
+height: 92px; */
+
+}
+.yako{
+width: 41px;
+height: 47px;
+}
+.company2{
+width: 40px;
+height: 52px;
+}
 /* ------------------------------------Portfolio----------------------------- */
 
 
